[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/Player/GUI/TextBox.png" type="Texture" id=1]
[ext_resource path="res://GUI/Fonts/TinyUnicode.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Player/Text.gd" type="Script" id=3]
[ext_resource path="res://GUI/Fonts/Text.tres" type="Theme" id=4]

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 564, 166 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 564, 0, 564, 166 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 1128, 0, 564, 166 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 1692, 0, 564, 166 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 2256, 0, 564, 166 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 2820, 0, 564, 166 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[node name="Text" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="Control" type="Control" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_top = -120.0
margin_bottom = -120.0

[node name="Sprite" type="AnimatedSprite" parent="Control"]
frames = SubResource( 9 )
frame = 5
playing = true

[node name="Label" type="Label" parent="Control"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 187.0
margin_top = 48.0
margin_right = 273.0
margin_bottom = 122.0
theme = SubResource( 2 )
text = "Press TAB"
align = 3
valign = 3

[node name="RichTextLabel" type="RichTextLabel" parent="Control"]
margin_left = -92.0
margin_top = -53.0
margin_right = 242.0
margin_bottom = 57.0
theme = ExtResource( 4 )
text = "Text here "

[node name="TextTween" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 15.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="BoxTween" type="Tween" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
